--- a/milestone_06.html
+++ b/milestone_06.html
@@ -24,16 +24,19 @@
 	Andrew Martinez<br>
 	March 1, 2014
 	</p>
+	
 	<h1>Lab Assignment / Assignment #5</h1>
+	
 	<h2>Question 1</h2>
 	<p>What search engine did you use?</p>
 	<p>Google</p>
+	
 	<h2>Question 2</h2>
 	<p>How many ‘hits’ did you get?</p>
 	<p>About 246,000</p>
+	
 	<h2>Question 3</h2>
-	<p>How useful (generally in terms of getting a pointers to live WMS services [defined as a functioning GetCapabilities request]) were the ‘hits’?
-<p>Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p>
+	<p>How useful (generally in terms of getting a pointers to live WMS services [defined as a functioning GetCapabilities request]) were the ‘hits’? Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p>
 The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
 	<p> The two that I will be using are; 
 	<ul>
@@ -42,6 +45,7 @@ The hits were suprisingly useful many of the of the "hits' on the first page wer
 	</ul>
 		
 	</p>
+
 	<h2>Question 4 (service #1)</h2>
 	<ul>
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
@@ -50,6 +54,7 @@ The hits were suprisingly useful many of the of the "hits' on the first page wer
 		<li>How many layers are included in the service (including nesting layers)?</li>
 	</ul>
 	<p></p>
+
 	<h2>Question 4 (service #2)</h2>
 	<ul> 
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
@@ -58,6 +63,7 @@ The hits were suprisingly useful many of the of the "hits' on the first page wer
 		<li>How many layers are included in the service (including nesting layers)?</li>
 	</ul>
 	<p></p>
+
 	<h2>Question 5</h2>
 	<p>For one of the layers in the first service,</p>
 	<ul>
@@ -67,6 +73,7 @@ The hits were suprisingly useful many of the of the "hits' on the first page wer
 		<li>What is the LatLonBoundingBox of the layer?</li>
 	</ul>
 	<p></p>
+
 	<h2>Question 6</h2>
 	<ul>
 		<li>for the area surrounding Bernalillo County (-107.2,34.7,-106,35.25) as a 200x200 pixel JPEG</li>
@@ -74,6 +81,7 @@ The hits were suprisingly useful many of the of the "hits' on the first page wer
 	</ul>
 	<p></p>
 	<p></p>
+
 	<h2>Question 7</h2>
 	
 
