--- a/milestone_06.html
+++ b/milestone_06.html
@@ -41,16 +41,17 @@
 	<p>The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
 
 	<p> The two that I will be using are; 
-	<ul>
-		<li>http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</li>
-		<li>http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</li>
-	</ul>
+	<ol>
+		<li>National Atlas</li>
+		<li>LIDAR</li>
+	</ol>
 		
 	</p>
 
 	<h2>Question 4 (service #1)</h2>
 	<ul>
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
+		<p>http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</p>
 		<li>What is the Name of the service?</li>
 		<li>What Format(s) are available for GetMap requests from the service?</li>
 		<li>How many layers are included in the service (including nesting layers)?</li>
@@ -60,6 +61,7 @@
 	<h2>Question 4 (service #2)</h2>
 	<ul> 
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
+		<p>http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</p>
 		<li>What is the Name of the service?</li>
 		<li>What Format(s) are available for GetMap requests from the service?</li>
 		<li>How many layers are included in the service (including nesting layers)?</li>
