--- a/milestone_06.html
+++ b/milestone_06.html
@@ -29,16 +29,16 @@
 	
 	<h2>Question 1</h2>
 	<p>What search engine did you use?</p>
-	<p>Google</p>
+	<p>ans) Google</p>
 	
 	<h2>Question 2</h2>
 	<p>How many ‘hits’ did you get?</p>
-	<p>About 246,000</p>
+	<p>ans) About 246,000</p>
 	
 	<h2>Question 3</h2>
 	<p>How useful (generally in terms of getting a pointers to live WMS services [defined as a functioning GetCapabilities request]) were the ‘hits’? Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p>
 	
-	<p>The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
+	<p>ans) The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
 
 	<p> The two that I will be using are; 
 	<ol>
@@ -51,7 +51,7 @@
 	<h2>Question 4 (service #1)</h2>
 	<ul>
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
-		<p>http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</p>
+		<p>ans) http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</p>
 		<li>What is the Name of the service?</li>
 		<li>What Format(s) are available for GetMap requests from the service?</li>
 		<li>How many layers are included in the service (including nesting layers)?</li>
@@ -61,7 +61,7 @@
 	<h2>Question 4 (service #2)</h2>
 	<ul> 
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
-		<p>http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</p>
+		<p>ans)http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</p>
 		<li>What is the Name of the service?</li>
 		<li>What Format(s) are available for GetMap requests from the service?</li>
 		<li>How many layers are included in the service (including nesting layers)?</li>
