--- a/milestone_06.html
+++ b/milestone_06.html
@@ -29,7 +29,7 @@
 	
 	<h2>Question 1</h2>
 	<p>What search engine did you use?</p>
-	<p>ans) Google</p>
+	<p><b>ANSWER:</b> Google</p>
 	
 	<h2>Question 2</h2>
 	<p>How many ‘hits’ did you get?</p>
