--- a/milestone_06.html
+++ b/milestone_06.html
@@ -33,12 +33,12 @@
 	
 	<h2>Question 2</h2>
 	<p>How many ‘hits’ did you get?</p>
-	<p>ans) About 246,000</p>
+	<p><b>ANSWER:</b> About 246,000</p>
 	
 	<h2>Question 3</h2>
 	<p>How useful (generally in terms of getting a pointers to live WMS services [defined as a functioning GetCapabilities request]) were the ‘hits’? Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p>
 	
-	<p>ans) The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
+	<p><b>ANSWER:</b> The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
 
 	<p> The two that I will be using are; 
 	<ol>
@@ -51,20 +51,26 @@
 	<h2>Question 4 (service #1)</h2>
 	<ul>
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
-		<p>ans) http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</p>
+		<p><b>ANSWER:</b> http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</p>
 		<li>What is the Name of the service?</li>
+		<p><b>ANSWER:</b> </p>
 		<li>What Format(s) are available for GetMap requests from the service?</li>
+		<p><b>ANSWER:</b> </p>
 		<li>How many layers are included in the service (including nesting layers)?</li>
+		<p><b>ANSWER:</b> </p>
 	</ul>
 	<p></p>
 
 	<h2>Question 4 (service #2)</h2>
 	<ul> 
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
-		<p>ans)http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</p>
+		<p><b>ANSWER:</b>http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</p>
 		<li>What is the Name of the service?</li>
+		<p><b>ANSWER:</b> </p>
 		<li>What Format(s) are available for GetMap requests from the service?</li>
+		<p><b>ANSWER:</b> </p>
 		<li>How many layers are included in the service (including nesting layers)?</li>
+		<p><b>ANSWER:</b></p>
 	</ul>
 	<p></p>
 
@@ -72,16 +78,22 @@
 	<p>For one of the layers in the first service,</p>
 	<ul>
 		<li>What is the name of the layer?</li>
+		<p><b>ANSWER:</b> </p>
 		<li>What is the SRS of the layer?</li>
+		<p><b>ANSWER:</b> </p>
 		<li>What is the name of the projection that matches the SRS EPSG code?</li>
+		<p><b>ANSWER:</b> </p>
 		<li>What is the LatLonBoundingBox of the layer?</li>
+		<p><b>ANSWER:</b> </p>
 	</ul>
 	<p></p>
 
 	<h2>Question 6</h2>
 	<ul>
 		<li>for the area surrounding Bernalillo County (-107.2,34.7,-106,35.25) as a 200x200 pixel JPEG</li>
+		<p><b>ANSWER:</b></p>
 		<li>for the same area as a 500x500 pixel PNG</li>
+		<p><b>ANSWER:</b> </p>
 	</ul>
 	<p></p>
 	<p></p>
