--- a/milestone_06.html
+++ b/milestone_06.html
@@ -57,20 +57,20 @@
 		<li>What Format(s) are available for GetMap requests from the service?</li>
 		<p><b>ANSWER:</b> text/xml</p>
 		<li>How many layers are included in the service (including nesting layers)?</li>
-		<p><b>ANSWER:</b> 132</p>
+		<p><b>ANSWER:</b> 132 Layers</p>
 	</ul>
 	<p></p>
 
 	<h2>Question 4 (service #2)</h2>
 	<ul> 
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
-		<p><b>ANSWER:</b>http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</p>
+		<p><b>ANSWER:</b> http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</p>
 		<li>What is the Name of the service?</li>
-		<p><b>ANSWER:</b> </p>
+		<p><b>ANSWER:</b> WMS</p>
 		<li>What Format(s) are available for GetMap requests from the service?</li>
-		<p><b>ANSWER:</b> </p>
+		<p><b>ANSWER:</b> text/xml</p>
 		<li>How many layers are included in the service (including nesting layers)?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> 4 Layers</p>
 	</ul>
 	<p></p>
 
