--- a/milestone_06.html
+++ b/milestone_06.html
@@ -78,13 +78,13 @@
 	<p>For one of the layers in the first service,</p>
 	<ul>
 		<li>What is the name of the layer?</li>
-		<p><b>ANSWER:</b> </p>
+		<p><b>ANSWER:</b> Dams</p>
 		<li>What is the SRS of the layer?</li>
-		<p><b>ANSWER:</b> </p>
+		<p><b>ANSWER:</b>  There actually 11 SRS but the first one is EPSG:4326.</p>
 		<li>What is the name of the projection that matches the SRS EPSG code?</li>
-		<p><b>ANSWER:</b> </p>
+		<p><b>ANSWER:</b> WGS 84</p>
 		<li>What is the LatLonBoundingBox of the layer?</li>
-		<p><b>ANSWER:</b> </p>
+		<p><b>ANSWER:</b> minx=17.7314 miny=-164.598 maxx=70.2814 maxy=-64.7801</p>
 	</ul>
 	<p></p>
 
