--- a/milestone_06.html
+++ b/milestone_06.html
@@ -80,7 +80,7 @@
 		<li>What is the name of the layer?</li>
 		<p><b>ANSWER:</b> Dams</p>
 		<li>What is the SRS of the layer?</li>
-		<p><b>ANSWER:</b>  There actually 11 SRS but the first one is EPSG:4326.</p>
+		<p><b>ANSWER:</b>  There are actually 11 SRS but the first one is EPSG:4326.</p>
 		<li>What is the name of the projection that matches the SRS EPSG code?</li>
 		<p><b>ANSWER:</b> WGS 84</p>
 		<li>What is the LatLonBoundingBox of the layer?</li>
