--- a/milestone_06.html
+++ b/milestone_06.html
@@ -95,7 +95,7 @@
 		<p><b>ANSWER:</b> 
 		<p>Request used: http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=200&HEIGHT=200&SRS=EPSG:4326&FORMAT=jpeg&STYLES=</p>
 		<a href="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=200&HEIGHT=200&SRS=EPSG:4326&FORMAT=jpeg&STYLES="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=200&HEIGHT=200&SRS=EPSG:4326&FORMAT=jpeg&STYLES=</a>
-			<img src="Bernalillo1.jpg"></a>
+			<img src="Bernalillo1.jpg">
 		
 		<li>for the same area as a 500x500 pixel PNG</li>
 	
