--- a/milestone_06.html
+++ b/milestone_06.html
@@ -103,7 +103,7 @@
 	
 		<p> Request used: "http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=png&STYLES="
 		<<a href="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=png&STYLES="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=png&STYLES=</a>
-			<img src="Bernalillo2.jpg"></a>
+			<img src="Bernalillo2.png"></a>
 	</ul>
 	
 
