--- a/milestone_06.html
+++ b/milestone_06.html
@@ -95,14 +95,14 @@
 		<p><b>ANSWER:</b> 
 		<p>Request used: http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=200&HEIGHT=200&SRS=EPSG:4326&FORMAT=jpeg&STYLES=</p>
 		<a href="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=200&HEIGHT=200&SRS=EPSG:4326&FORMAT=jpeg&STYLES="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=200&HEIGHT=200&SRS=EPSG:4326&FORMAT=jpeg&STYLES=</a>
-			<p><img src="Bernalillo1.jpg"></a></p>
+			<img src="Bernalillo1.jpg"></a>
 		
 		<li>for the same area as a 500x500 pixel PNG</li>
 	
 		<p><b>ANSWER:</b> 
 	
 		<p> Request used: "http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=png&STYLES="</p>
-		<<a href="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=png&STYLES="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=png&STYLES=</a>
+		<a href="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=png&STYLES="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-107.2,34.7,-106,35.25&LAYERS=2007fe_35_county00&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=png&STYLES=</a>
 			<img src="Bernalillo2.png"></a>
 	</ul>
 	
