--- a/milestone_06.html
+++ b/milestone_06.html
@@ -113,7 +113,7 @@
 		
 	</ul>
 	
-	<p><b>ANSWER:</b> <a href="http://rgis.unm.edu/gstore/datasets/52206.kml">http://rgis.unm.edu/gstore/datasets/52206.kml<a><p>
+	<p><b>ANSWER:</b> 
 	<p> Download Google Earth KML Here: a<href="http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml"<a/></p>
 	
 	</body>
