--- a/milestone_06.html
+++ b/milestone_06.html
@@ -114,7 +114,14 @@
 	</ul>
 	
 	<p><b>ANSWER:</b> 
-	<p> Download Google Earth KML Here: a<href="http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml"<a/></p>
+	
+	<p><ul> 
+	<li> Download Google Earth NM Boundry Here (KML): <a href="http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml"<a/>
+	<li>Download Google Earth Inset NM Boundry Here (KML) : </li>
+	
+	</ul>
+		
+	</p>
 	
 	</body>
 	
