--- a/milestone_06.html
+++ b/milestone_06.html
@@ -116,12 +116,7 @@
 	<p><b>ANSWER:</b> 
 	
 	<ul> 
-	<li> Download Google Earth NM Boundry Here (KML):<p><a href="http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml"<a/>
-	</ul>
-	
-	<ul>
-	
-	<li>Download Google Earth Inset NM Boundry Here (KML) : </li>
+	<li> Download Google Earth NM Boundry Here (KML):<p><a href="http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml"<a/>http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml</li>
 	</ul>
 		
 	</body>
