--- a/milestone_06.html
+++ b/milestone_06.html
@@ -112,7 +112,9 @@
 	
 	<li>Add a second Placemark element to the KML file that represents a square region that is completely contained within the state boundary. Save the KML file and open it in Google Earth (download from http://www.google.com/earth/index.html) or view it in Google Maps (by adding it to your GitHub gh-pages branch) as demonstrated in the lecture to verify that you have successfully created the file. Submit the KML file (as a link in your writeup) as part of your writeup for the milestone.</li>
 	
-	<p><b> ANSWER:</b>Download Google Earth NM Boundry Here (KML):<a href="http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml"<a/>http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml</p>
+	<p><b> ANSWER:</b>Download Google Earth NM Boundry (KML): <a href="http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml"<a/>http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml</p>
+	<p><b> ANSWER:</b>Download Google Earth NM Boundry With Added Placemark (KML): <a href=""
+	
 		
 	</body>
 	
