--- a/NMBoundPM.html
+++ b/NMBoundPM.html
@@ -10,7 +10,7 @@
 		<title>Geography 485L/585L Assignment Template</title>
 	</head>
 	
-	<p><a href="http://rgis.unm.edu/gstore/datasets/3f0a85aa-b7f8-47bd-8db6-1c0e66becf72/nm_state_bdy_00.derived.kml"> NM Boundry</a></p>
+	<p><a href="file://localhost/Users/aemtoyo4x4/Documents/Spring%202014/Internet%20Mapping/nm_state_bdy_00/nm_state_bdy_00.kml"> NM Boundry</a></p>
 		
 	</body>
 	
