--- a/PMGoogleEarth.html
+++ b/PMGoogleEarth.html
@@ -10,7 +10,7 @@
 		<title>Geography 485L/585L Assignment Template</title>
 	</head>
 	<body>
-	<p><a href="http://aemtoyo.github.io/geog485/index_styled.html"> Index Styled</a></p>
+	<p><a href="file://localhost/Users/aemtoyo4x4/Documents/Spring%202014/Internet%20Mapping/Milestone%206/3/nm_state_bdy_00_PM.kml"> KML File</a></p>
 		
 	</body>
 	
