--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_06.html">Milestone 6</a></p>
 		
 		
+		
 		<h2>Deep Dives</h2>
 		<p><a href="http://aemtoyo.github.io/geog485/deepdive_01.html">Deep Dive 1</a></p>
-		
+		<p><a href="http://aemtoyo.github.io/geog485/deepdive_02.html">Deep Dive 2</a></p>
 	
 	</body>
 </html>
