--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<title>Geography 485 Internet Mapping</title>
-		<style type=text/css>
+		
+		<style type="text/css">
+		  html { height: 100% }
+		  body { height: 100%; 
+			margin: 10px; 
+			padding: 10px; 
+			background-color: black; 
+			color: #CCCCCC;
+			text-align: left}
 			
 		</style>
 
