--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -7,7 +7,7 @@
 	
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-		<title>Geography 485L/585L Assignment 6</title>
+		<title>Geography 485L/585L Deep Dive 2</title>
 	</head>
 	
 	<style type="text/css">
@@ -22,31 +22,36 @@
 	<body>
 	<p>
 	Andrew Martinez<br>
-	March 1, 2014
+	March 3, 2014
 	</p>
 	
-	<h1>Lab Assignment / Assignment #5</h1>
+	<h1>Deep Dive 2/h1>
 	
 	<h2>Question 1</h2>
-	<p>What search engine did you use?</p>
+	
+	<ul>
+		<li>What request type is common across all three (WMS, WFS, WCS) OGC web services that we have learned about?</li>
+	</ul>
+	
 	<p><b>ANSWER:</b> Google</p>
 	
 	<h2>Question 2</h2>
-	<p>How many ‘hits’ did you get?</p>
-	<p><b>ANSWER:</b> About 246,000</p>
+	<ul>
+		<li>What are the required parameters, and what do they represent?</li>
+		<p><b>ANSWER:</b></p>
+		<li>What is returned in response to a WMS GetCapabilities request?</li>
+		<p><b>ANSWER:</b></p>
+	</ul>
 	
 	<h2>Question 3</h2>
-	<p>How useful (generally in terms of getting a pointers to live WMS services [defined as a functioning GetCapabilities request]) were the ‘hits’? Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p>
-	
-	<p><b>ANSWER:</b> The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
-
-	<p> The two that I will be using are; 
-	<ol>
-		<li>National Atlas</li>
-		<li>LIDAR</li>
-	</ol>
-		
-	</p>
+	<ul>
+		<li>What are the required parameters, and what do they represent?</li>
+		<p><b>ANSWER:</b></p>
+		<li>What is returned in response to a WMS GetMap request?</li>
+		<p><b>ANSWER:</b></p>
+		<li>What is the significance of transparency in WMS requests?</li>
+		<p><b>ANSWER:</b></p>
+	</ul>
 
 	<h2>Question 4 (service #1)</h2>
 	<ul>
