--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -25,73 +25,62 @@
 	March 3, 2014
 	</p>
 	
-	<h1>Deep Dive 2/h1>
+	<h1>Deep Dive 2</h1>
 	
 	<h2>Question 1</h2>
 	
-	<ul>
+	<ol>
 		<li>What request type is common across all three (WMS, WFS, WCS) OGC web services that we have learned about?</li>
 		<p><b>ANSWER:</b> Google</p>
 		
-	</ul>
+	</ol>
 	
 	<h2>Question 2</h2>
-	<ul>
+	<ol>
 		<li>What are the required parameters, and what do they represent?</li>
 		<p><b>ANSWER:</b></p>
 		<li>What is returned in response to a WMS GetCapabilities request?</li>
 		<p><b>ANSWER:</b></p>
-	</ul>
+	</ol>
 	
 	<h2>Question 3</h2>
-	<ul>
+	<ol>
 		<li>What are the required parameters, and what do they represent?</li>
 		<p><b>ANSWER:</b></p>
 		<li>What is returned in response to a WMS GetMap request?</li>
 		<p><b>ANSWER:</b></p>
 		<li>What is the significance of transparency in WMS requests?</li>
 		<p><b>ANSWER:</b></p>
-	</ul>
+	</ol>
 
-	<h2>Question 4 (service #1)</h2>
-	<ul>
-		<li>What is the URL for the full GetCapabilities request to the service?</li>
-		<p><b>ANSWER:</b> http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</p>
-		<li>What is the Name of the service?</li>
-		<p><b>ANSWER:</b> WMS</p>
-		<li>What Format(s) are available for GetMap requests from the service?</li>
-		<p><b>ANSWER:</b> text/xml</p>
-		<li>How many layers are included in the service (including nesting layers)?</li>
-		<p><b>ANSWER:</b> 132 Layers</p>
-	</ul>
-	<p></p>
-
-	<h2>Question 4 (service #2)</h2>
-	<ul> 
-		<li>What is the URL for the full GetCapabilities request to the service?</li>
-		<p><b>ANSWER:</b> http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</p>
-		<li>What is the Name of the service?</li>
-		<p><b>ANSWER:</b> WMS</p>
-		<li>What Format(s) are available for GetMap requests from the service?</li>
-		<p><b>ANSWER:</b> text/xml</p>
-		<li>How many layers are included in the service (including nesting layers)?</li>
-		<p><b>ANSWER:</b> 4 Layers</p>
-	</ul>
-	<p></p>
+	<h2>Question 4</h2>
+	<ol>
+		<li>What OGC request would you use to inform the configuration of a client application (like ArcGIS) about an OGC service that you want to add layers from?</li>
+		<p><b>ANSWER:</b></p>
+	</ol>
 
 	<h2>Question 5</h2>
-	<p>For one of the layers in the first service,</p>
-	<ul>
-		<li>What is the name of the layer?</li>
-		<p><b>ANSWER:</b> Dams</p>
-		<li>What is the SRS of the layer?</li>
-		<p><b>ANSWER:</b>  There are actually 11 SRS but the first one is EPSG:4326.</p>
-		<li>What is the name of the projection that matches the SRS EPSG code?</li>
-		<p><b>ANSWER:</b> WGS 84</p>
-		<li>What is the LatLonBoundingBox of the layer?</li>
-		<p><b>ANSWER:</b> minx=17.7314 miny=-164.598 maxx=70.2814 maxy=-64.7801</p>
-	</ul>
-	<p></p>
+	<ol> 
+		<li>You want a map image representing three layers of data in a single JPEG for a specified area of interest.</li>
+		<p><b>ANSWER:</b></p>
+		<li>You want to retrieve data representing geometries and associated attributes for a road network, with the returned data in GML.</li>
+		<p><b>ANSWER:</b></p>
+		<li> You want to retrieve data representing a digital elevation model (a raster dataset) in the form of a GeoTIFF.</li>
+		<p><b>ANSWER:</b></p>
+	
+	</ol>
+
+	<h2>Question 6</h2>
+	<p>What are the EPSG codes of the following Spatial Reference Systems</p>
+	<ol>
+		<li>WWGS 84 (Geodetic CRS [geographic 2d])</li>
+		<p><b>ANSWER:</b></p>
+		<li>NAD83 / UTM zone 13N</li>
+		<p><b>ANSWER:</b></p>
+		<li>NAD27 / UTM zone 13N</li>
+		<p><b>ANSWER:</b></p>
+		
+	</ol>
 
 	<h2>Question 6</h2>
 	<ul>
