--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -94,7 +94,7 @@
 	<h2>Question 8</h2>
 	
 	<p>Retrieve the GetCapabilities XML response from the following WMS, and answer the following questions.</p> 
-	<p>http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?SERVICE=wms&REQUEST=GetCapabilities&VERSION=1.1.1</p>
+	<p><a href="http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?SERVICE=wms&REQUEST=GetCapabilities&VERSION=1.1.1" a></p>
 		
 	<ol>
 		<li>WWhat is the Title of the service?</li>
