--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -97,7 +97,7 @@
 	<p><a href="http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?SERVICE=wms&amp;REQUEST=GetCapabilities&amp;VERSION=1.1.1">http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?SERVICE=wms&amp;REQUEST=GetCapabilities&amp;VERSION=1.1.1</a></p>
 		
 	<ol>
-		<li>WWhat is the Title of the service?</li>
+		<li>What is the Title of the service?</li>
 		<p><b>ANSWER:</b></p>
 		<li>Who is the Contact Person for questions about the service?</li>
 		<p><b>ANSWER:</b></p>
