--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -98,13 +98,26 @@
 		
 	<ol>
 		<li>What is the Title of the service?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> rgis Dataset (715663ba-c1c3-414c-84a7-c671526f8316)</p>
 		<li>Who is the Contact Person for questions about the service?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> technical support</p>
 		<li>What are the available image formats for the GetMap request for this service?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> png, gif, jpeg, tiff, png 8 bit</p>
 		<li>What are the SRS/CRS’s for which layers from this service are available (remember that nested layers inherit the SRS/CRS of their parent layers).</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b>
+			<ul>
+				<li>EPSG:4269</li>
+				<li>EPSG:4326</li>
+				<li>EPSG:4267</li>
+				<li>EPSG:26913</li>
+				<li>EPSG:26912</li>
+				<li>EPSG:26914</li>
+				<li>EPSG:26713</li>
+				<li>EPSG:26712</li>
+				<li>EPSG:26714</li>
+				<li>EPSG:3857</li>
+			</ul>
+		</p>
 	</ol>
 	
 	<h2>Question 9</h2>
@@ -118,4 +131,3 @@
 	
 	
 </html>
-
