--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -36,6 +36,7 @@
 	</ol>
 	
 	<h2>Question 2</h2>
+	<p>Answer the following questions about a WMS GetCapabilities request</p>
 	<ol>
 		<li>What are the required parameters, and what do they represent?</li>
 		<p><b>ANSWER:</b></p>
@@ -60,6 +61,7 @@
 	</ol>
 
 	<h2>Question 5</h2>
+	<p>Which OGC request would you submit under the following circumstances (include both the service type [e.g. WMS, WFS, WCS], and the request [e.g. GetMap, GetCapabilities, GetCoverage, etc.] in your answer)</p>
 	<ol> 
 		<li>You want a map image representing three layers of data in a single JPEG for a specified area of interest.</li>
 		<p><b>ANSWER:</b></p>
