--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -74,9 +74,9 @@
 			</ul>
 		</p>
 		<li>What is returned in response to a WMS GetMap request?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> The GetMap operation is designed to produce a map, which is defined to be either a pictorial image or a set of graphical elements.</p>
 		<li>What is the significance of transparency in WMS requests?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> It allows you to put many layers on a single map.</p>
 	</ol>
 
 	<h2>Question 4</h2>
@@ -101,11 +101,11 @@
 	<p>What are the EPSG codes of the following Spatial Reference Systems</p>
 	<ol>
 		<li>WWGS 84 (Geodetic CRS [geographic 2d])</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> EPSG: 4326</p>
 		<li>NAD83 / UTM zone 13N</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> EPSG: 26913</p>
 		<li>NAD27 / UTM zone 13N</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> EPSG: 26713</p>
 		
 	</ol>
 
