--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -82,18 +82,18 @@
 	<h2>Question 4</h2>
 	<ol>
 		<li>What OGC request would you use to inform the configuration of a client application (like ArcGIS) about an OGC service that you want to add layers from?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> The "GetCapabilites" request</p>
 	</ol>
 
 	<h2>Question 5</h2>
 	<p>Which OGC request would you submit under the following circumstances (include both the service type [e.g. WMS, WFS, WCS], and the request [e.g. GetMap, GetCapabilities, GetCoverage, etc.] in your answer)</p>
 	<ol> 
 		<li>You want a map image representing three layers of data in a single JPEG for a specified area of interest.</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> WMS GetMap request</p>
 		<li>You want to retrieve data representing geometries and associated attributes for a road network, with the returned data in GML.</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> WFS GetFeature request</p>
 		<li> You want to retrieve data representing a digital elevation model (a raster dataset) in the form of a GeoTIFF.</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> WCS GetCoverage request</p>
 	
 	</ol>
 
