--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -151,7 +151,8 @@
 	
 	<ol>
 		<li>Formulate a GetMap request for the “tl_2010_35_bg10” layer from this service, for a 500x500 pixel map image that is 0.05-degrees wide and 0.05-degress high, with the SW corner of the map image located at 35°N and -106°45'E. Include in your write-up the complete GetMap request and the returned map image.  </li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> 	<a href="http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?VERSION=1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.0,35,-105.95,35.05&LAYERS=tl_2010_35_bg10,tl_2010_35_bg10&WIDTH=500&HEIGHT=5000&EPSG:4326&FORMAT=image/png&STYLES="></p>
+	<p> http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?VERSION=1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.0,35,-105.95,35.05&LAYERS=tl_2010_35_bg10,tl_2010_35_bg10&WIDTH=500&HEIGHT=5000&EPSG:4326&FORMAT=image/png&STYLES=</p>
 	</ol>
 		
 	</body>
