Updates Milestone 6 and deep dive 2

--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -113,9 +113,9 @@
 	<p>Use the cs2cs utility to convert the following WGS84 Geographic Coordinates into UTM Zone 13, NAD83 coordinates. Include your cs2cs command and output in your writeup.</p>
 	<ol>
 		<li>35°14′19.29″ N, 107°36′30.67″ W (Mount Taylor Summit)</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b><a href="Images/Snip20140305_1.png"</a></p>
 		<li>34°16′40.34″ N, 103°19′28.49″ W (Blackwater Draw)</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b><a href="Images/Snip20140305_2.png"</p></p>
 	</ol>
 		
 	<h2>Question 8</h2>
