--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -113,9 +113,9 @@
 	<p>Use the cs2cs utility to convert the following WGS84 Geographic Coordinates into UTM Zone 13, NAD83 coordinates. Include your cs2cs command and output in your writeup.</p>
 	<ol>
 		<li>35°14′19.29″ N, 107°36′30.67″ W (Mount Taylor Summit)</li>
-		<p><b>ANSWER:</b><a href="Images/Snip20140305_1.png"></a></p>
+		<p><b>ANSWER:</b><img src="Images/Snip20140305_1.png"></p>
 		<li>34°16′40.34″ N, 103°19′28.49″ W (Blackwater Draw)</li>
-		<p><b>ANSWER:</b><a href="Images/Snip20140305_2.png"></a></p>
+		<p><b>ANSWER:</b><img src="Images/Snip20140305_2.png"></p>
 	</ol>
 		
 	<h2>Question 8</h2>
@@ -152,7 +152,7 @@
 	<ol>
 		<li>Formulate a GetMap request for the “tl_2010_35_bg10” layer from this service, for a 500x500 pixel map image that is 0.05-degrees wide and 0.05-degress high, with the SW corner of the map image located at 35°N and -106°45'E. Include in your write-up the complete GetMap request and the returned map image.  </li>
 		<p><b>ANSWER:</b> <p>http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.0,35,-105.95,35.05&LAYERS=tl_2010_35_bg10,tl_2010_35_bg10&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=image/png&STYLES=
-		<a img src="Images/Bernalillo1.png"</a>
+		<p><img src="Images/Bernalillo1.png"></p>
 		
 		
 	http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?VERSION=1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.0,35,-105.95,35.05&LAYERS=tl_2010_35_bg10,tl_2010_35_bg10&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=image/png&STYLES=<a/></p>
