--- a/deepdive_02.html
+++ b/deepdive_02.html
@@ -113,9 +113,13 @@
 	<p>Use the cs2cs utility to convert the following WGS84 Geographic Coordinates into UTM Zone 13, NAD83 coordinates. Include your cs2cs command and output in your writeup.</p>
 	<ol>
 		<li>35°14′19.29″ N, 107°36′30.67″ W (Mount Taylor Summit)</li>
-		<p><b>ANSWER:</b><img src="Images/Snip20140305_1.png"></p>
+		<p><b>ANSWER:</b>
+		<p><img src="Images/Snip20140305_1.png"></p>
+		</p>
 		<li>34°16′40.34″ N, 103°19′28.49″ W (Blackwater Draw)</li>
-		<p><b>ANSWER:</b><img src="Images/Snip20140305_2.png"></p>
+		<p><b>ANSWER:</b> 
+		<p><img src="Images/Snip20140305_2.png"></p>
+		</p>
 	</ol>
 		
 	<h2>Question 8</h2>
@@ -154,10 +158,6 @@
 		<p><b>ANSWER:</b> <p>http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.0,35,-105.95,35.05&LAYERS=tl_2010_35_bg10,tl_2010_35_bg10&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=image/png&STYLES=
 		<p><img src="Images/Bernalillo1.png"></p>
 		
-		
-	http://gstore.unm.edu/apps/rgis/datasets/715663ba-c1c3-414c-84a7-c671526f8316/services/ogc/wms?VERSION=1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.0,35,-105.95,35.05&LAYERS=tl_2010_35_bg10,tl_2010_35_bg10&WIDTH=500&HEIGHT=500&SRS=EPSG:4326&FORMAT=image/png&STYLES=<a/></p>
-		
-	
 	</ol>
 		
 	</body>
