--- a/milestone_05.html
+++ b/milestone_05.html
@@ -27,30 +27,33 @@
 	</p>
 	<h1>Lab Assignment / Assignment #5</h1>
 	
-	<h2>Question 1 <p>Briefly describe each dataset based upon the information from the web site.</p></h2>
-	<p>Chimayo, NM, SW Quarter 36105, 2005, RGB- is a DOQQ raster image. It is a 7.5 minute image its services include wms and wcs.</p>
+	<h2>Question 1</h2> 
+	<p>Briefly describe each dataset based upon the information from the web site.</p>
+	<ol>
+		<li>Chimayo, NM, SW Quarter 36105, 2005, RGB- is a DOQQ raster image. It is a 7.5 minute image its services include wms and wcs.</li>
 		
-	<p>CHIMAYO, SW NAIP DOQQ (3610557) - 2011 - is another DOQQ raster image. It is also a 7.5 minute image and its services also include wms and wcs.</p>
+		<li>CHIMAYO, SW NAIP DOQQ (3610557) - 2011 - is another DOQQ raster image. It is also a 7.5 minute image and its services also include wms and wcs.</li>
 	   
-	<p>CHIMAYO, SW NAIP DOQQ (3610557) - 2009 - is the last DOQQ rater image. A 7.5 minute image that supports wms and wcs.</p>
-	</p>
+		<li>CHIMAYO, SW NAIP DOQQ (3610557) - 2009 - is the last DOQQ rater image. A 7.5 minute image that supports wms and wcs.</li>
+	</ol>
 	
-	<h2>Question 2 
-	
+	<h2>Question 2</h2> 
 	<p>Examine each file using either gdalinfo or ogrinfo (depending upon whether it is a raster or vector data product), and answer the following questions about each data set: What is the projection/coordinate system for the data product? If it is undefined, note it. What is the spatial extent (i.e. bounding box) of the data product?
-If it is a vector dataset, how many features does it have? If it is a raster dataset, what is the pixel resolution (include units) of the dataset?</p></h2>
-	<p>Chimayo, NM, SW Quarter 36105, 2005, RGB:</p>
-	<p>CHIMAYO, SW NAIP DOQQ (3610557) - 2011:</p>
-	<p>CHIMAYO, SW NAIP DOQQ (3610557) - 2009:</p>
-	</p>
-	<h2>Question 3 <p>Use proj or cs2cs (I suggest you use cs2cs) to calculate the coordinates of the spatial extent of the datasets that you downloaded in UTM Zone 13N, NAD27. Paste the input and output of the command(s) into your writeup.</p></h2>
-	<p></p>
-
-  	</head>
+If it is a vector dataset, how many features does it have? If it is a raster dataset, what is the pixel resolution (include units) of the dataset?</p>
+	<ol>
+		<li>Chimayo, NM, SW Quarter 36105, 2005, RGB:</li>
+		<li>CHIMAYO, SW NAIP DOQQ (3610557) - 2011:</li>
+		<li>CHIMAYO, SW NAIP DOQQ (3610557) - 2009:</li>
+	</ol>
+	
+	<h2>Question 3</h3> 
+	<p>Use proj or cs2cs (I suggest you use cs2cs) to calculate the coordinates of the spatial extent of the datasets that you downloaded in UTM Zone 13N, NAD27. Paste the input and output of the command(s) into your writeup.</p>
+	<ol>
+		<li><img src=Images/></li>
+		<li><img src=Images/></li>
+		<li><img src=Images/></li>
+	<ol>
   	
   	<head>
-
-
-
 
 </html>
