--- a/milestone_05.html
+++ b/milestone_05.html
@@ -41,19 +41,35 @@
 	<p>Examine each file using either gdalinfo or ogrinfo (depending upon whether it is a raster or vector data product), and answer the following questions about each data set: What is the projection/coordinate system for the data product? If it is undefined, note it. What is the spatial extent (i.e. bounding box) of the data product?
 If it is a vector dataset, how many features does it have? If it is a raster dataset, what is the pixel resolution (include units) of the dataset?</p>
 	<ol>
-		<li>Chimayo, NM, SW Quarter 36105, 2005, RGB:</li>
-		<li>CHIMAYO, SW NAIP DOQQ (3610557) - 2011:</li>
-		<li>CHIMAYO, SW NAIP DOQQ (3610557) - 2009:</li>
+		<li>Chimayo, NM, SW Quarter 36105, 2005, RGB: NAD83 / UTM zone 13N 
+			<ul> 
+				<li>Pixel Size = (1.000000000000000,-1.000000000000000) TIFF TAG RESOLUTION UNIT=2 (pixels/inch)</li>
+				<p><img src=Images/doqq05_05_36105a88__15909_tif.png></p>
+			</ul>	
+		 </li>
+		<li>CHIMAYO, SW NAIP DOQQ (3610557) - 2011: NAD83 / UTM zone 13N</li>
+			<ul> 
+				<li>Pixel Size = (1.000000000000000,-1.000000000000000) TIFF TAG RESOLUTION UNIT=2 (pixels/inch)meters</li>
+				<p><img src=Images/m_3610557_sw_13_1_20110527_tif.png></p>
+			</ul>
+		<li>CHIMAYO, SW NAIP DOQQ (3610557) - 2009: NAD83 / UTM zone 13N</li>
+			<ul> 
+				<li>Pixel Size = (1.000000000000000,-1.000000000000000) TIFF TAG RESOLUTION UNIT=2 (pixels/inch)meters</li>
+				<p><img src=Images/a.png></p>
+			</ul>
 	</ol>
 	
 	<h2>Question 3</h3> 
 	<p>Use proj or cs2cs (I suggest you use cs2cs) to calculate the coordinates of the spatial extent of the datasets that you downloaded in UTM Zone 13N, NAD27. Paste the input and output of the command(s) into your writeup.</p>
 	<ol>
-		<li><img src=Images/></li>
-		<li><img src=Images/></li>
-		<li><img src=Images/></li>
+		<li><img src=Images/doqq05_05_36105a88__15909_tif_2.png></li>
+		<li><img src=Images/m_3610557_sw_13_1_20110527_tif_2.png></li>
+		<li><img src=Images/n_3610557_sw_13_1_20090713_tif_2.png></li>
 	<ol>
   	
   	<head>
 
 </html>
+
+
+
