--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_04.html">Milestone 4</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_05.html">Milestone 5</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_06.html">Milestone 6</a></p>
+		<p><a href="http://aemtoyo.github.io/geog485/milestone_07.html">Milestone 7</a></p>
 		
 		
 		
