--- a/milestone_07.html
+++ b/milestone_07.html
@@ -40,11 +40,13 @@ BBOX: -109.5, 34.5, -106.5, 36.5</h2>
 	
 <h2>Question 3</h2>
 	<p>Formulate a WMS request that reflects the values determined in 1.1 and 1.2 above for the WMS service used above in the examples. Include in your answer both the actual WMS request and the returned map image.</p>
-	<p><b>ANSWER:</b></p>
+	<p><b>ANSWER:</b> The WMS request is <a href="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-109.5,34.5,-106.5,36.5&LAYERS=2007fe_35_county00&WIDTH=600&HEIGHT=400&SRS=EPSG:4326&FORMAT=jpeg&STYLES=">http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-109.5,34.5,-106.5,36.5&LAYERS=2007fe_35_county00&WIDTH=600&HEIGHT=400&SRS=EPSG:4326&FORMAT=jpeg&STYLES=</a>
+	<img src="http://gstore.unm.edu/apps/rgis/datasets/97810/services/ogc/wms?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-109.5,34.5,-106.5,36.5&LAYERS=2007fe_35_county00&WIDTH=600&HEIGHT=400&SRS=EPSG:4326&FORMAT=jpeg&STYLES="
+	</p>
 	
 <h2>Question 4</h2>
 	<p>Formulate a WMS request for a 900x600 pixel map image that represents the full 3-degree width of the geographic region, and is based upon the minimum Y value of 34.5 degrees North Latitude. Include in your answer both the WMS request and the returned map image.</p>
-	<p><b>ANSWER:</b></p>
+	<p><b>ANSWER:</b> So, =(-106.5-(-109.5))/(36.5-34.5)=1.5 </p>
 	
 <h2>Question 5</h2>
 	<p>Given a WMS that is represented by the following GetCapabilities request, formulate individual GetMap requests using the following parameters:</p>
